feat: Upgrade to support services on Spring Boot 3.5.14: Changes by OpenRewrite plugin.